# rm_radar_2024

./: README.md
hk_camera/cfg/: camera.cfg
hk_camera/config/: hk_camera_config.yaml  hk_left.txt  hk_left.yaml  hk_right.yaml
hk_camera/include/: hk_camera.h
hk_camera/launch/: double_device.launch  single_device.launch
hk_camera/src/: hk_camera.cpp
patchwork-plusplus-ros/launch/: demo.launch
patchwork-plusplus-ros/src/: demo.cpp
rm_config/config/rm_referee/: radar.yaml
rm_control/rm_msgs/: CMakeLists.txt
rm_control/rm_msgs/msg/: Dart.msg
rm_control/rm_msgs/msg/radar/: ClientMapDataArray.msg  DartPositionInCam.msg  RadarTargetDetection.msg  RadarTargetDetectionArray.msg  RadarWarningState.msg
rm_control/rm_referee/include/rm_referee/common/: data.h
rm_detector_v8s_p2/: CMakeLists.txt  nodelet_info.xml  package.xml
rm_detector_v8s_p2/cfg/: dynamic.cfg
rm_detector_v8s_p2/config/: left_camera.yaml  right_camera.yaml
rm_detector_v8s_p2/include/TensorRT_yolov8/: config.h  postprocess.h  preprocess.h
rm_detector_v8s_p2/include/rm_bytetrack/: BYTETracker.h
rm_detector_v8s_p2/include/rm_detector_v8s_p2/: detector.h  inferencer.h
rm_detector_v8s_p2/launch/: armor_detector.launch
rm_detector_v8s_p2/plugin/: yololayer.cu  yololayer.h
rm_detector_v8s_p2/src/: detector.cpp  inferencer.cpp
rm_detector_v8s_p2/src/TensorRT_yolov8/: block.cpp  calibrator.cpp  model.cpp  postprocess.cpp  postprocess.cu  preprocess.cu
rm_detector_v8s_p2/src/rm_bytetrack/: STrack.cpp
rm_radar/: CMakeLists.txt  README.md  UI.xml  instructions.md  package.xml  rm_radar.xml
rm_radar/cfg/: lidar.cfg
rm_radar/config/: UI.rviz  camera_left.yaml  camera_left_test.yaml  camera_right.yaml  camera_right_test.yaml  map.yaml  mouse_callback_config_left.yaml  mouse_callback_config_right.yaml  test.rviz
rm_radar/include/: UI.h  lidar.h
rm_radar/include/FEC/: fast_euclidean_clustering.h
rm_radar/include/Kmeans/: kmeans.hpp
rm_radar/launch/: radar_all.launch  radar_double_camera.launch  record.launch  rm_radar.launch  test.launch
rm_radar/src/: UI.cpp  lidar.cpp
rm_tower/: CMakeLists.txt  package.xml  rm_tower.xml
rm_tower/config/: tower.yaml
rm_tower/include/rm_tower/: rm_tower.h  time_change_missing.hpp
rm_tower/launch/: tower.launch
rm_tower/src/: rm_tower.cpp
